DRIVERS: irqchip: Add RISC-V incoming MSI controller driver
The RISC-V advanced interrupt architecture (AIA) specification defines
a new MSI controller for managing MSIs on a RISC-V platform. This new
MSI controller is referred to as incoming message signaled interrupt
controller (IMSIC) which manages MSI on per-HART (or per-CPU) basis.
(For more details refer https://github.com/riscv/riscv-aia)

This patch adds an irqchip driver for RISC-V IMSIC found on RISC-V
platforms.

Signed-off-by: Anup Patel <anup@brainfault.org>

--- a/drivers/irqchip/openconf.cfg
+++ b/drivers/irqchip/openconf.cfg
@@ -112,4 +112,15 @@ config CONFIG_RISCV_APLIC
 
 	   If you don't know what to do here, say Y.
 
+config CONFIG_RISCV_IMSIC
+	bool "RISC-V Incoming MSI Controller"
+	default n
+	depends on CONFIG_RISCV
+	help
+	   This enables support for the IMSIC chip found in RISC-V systems.
+	   The IMSIC controls message signaled interrupts and forwards them
+	   to each core as wired local interrupt.
+
+	   If you don't know what to do here, say Y.
+
 endmenu
