update support for sifive-uart

--- a/arch/common/openconf.cfg
+++ b/arch/common/openconf.cfg
@@ -100,6 +100,11 @@ choice
 		bool "zynq-uart"
 		help
 			Zynq uart based early prints
+
+	config CONFIG_ARCH_GENERIC_DEFTERM_EARLY_SIFIVE_UART
+		bool "sifive-uart"
+		help
+			Sifive uart based early prints
 endchoice
 
 config CONFIG_ARCH_GENERIC_DEFTERM_EARLY_BASE_PA
