--- a/drivers/serial/openconf.cfg
+++ b/drivers/serial/openconf.cfg
@@ -79,6 +79,13 @@ config CONFIG_SERIAL_BCM283X_MU
 	help
 		BCM283x Miniuart Serial Port.
 
+config CONFIG_SERIAL_SIFIVE
+	bool "Sifive UART"
+	depends on CONFIG_SERIAL
+	default n
+	help
+		Sifive Serial Port.
+
 config CONFIG_SERIAL_ZYNQ_UART
 	bool "Zynq UART"
         depends on CONFIG_SERIAL
