--- a/drivers/spi/openconf.cfg
+++ b/drivers/spi/openconf.cfg
@@ -79,6 +79,12 @@ config CONFIG_SPI_BCM2835
 	  This enables the driver for Broadcomm's SPI controller
 	  in master mode.
 
+config CONFIG_SPI_SIFIVE
+	tristate "SIFIVE SPI controller"
+	help
+	  This enables the driver for Sifve's SPI controller
+	  in master mode.
+
 comment "SPI Protocol Masters"
 
 config CONFIG_SPI_SPIDEV
